syntax="proto3";

package protos;

message BaseHandshakeMsg {
    uint32 Version = 1;

    uint32 NetId = 2;

    string Name = 3;

    bytes ID = 4;

	int64 Timestamp = 5;

	bytes Nonce = 6;
}

message ProtoData {
    uint32 ID = 1;

    bytes Data = 2;
}

message HandshakeMsg {
    bytes Base = 1;
    repeated ProtoData Protocols = 2;
}
